# covid-notifier

./: .gitignore  LICENSE  README.md  config.py  db.py  docker-compose.yml  env.example  how_to_contribute.md  jsonish  notifications.py  pull_data.py  pyproject.toml  statewide_scraper.py
caddy/: Caddyfile.example  Dockerfile  nginx.conf
covid_notifier/: app.py  commands.py  helpers.py  models.py  routes.py  sensitive.py.example  sms_handlers.py
covid_notifier/templates/: region_dashboard.html.j2  state_dashboard.html.j2  user_dashboard.html.j2
db/: Dockerfile
db/init-scripts/: init-user-db.sh
env/: db.env.example  env.example  frontend.env.example
frontend/: Dockerfile  entrypoint.sh  pyproject.toml
frontend/covid_notifier/: app.py  commands.py  helpers.py  models.py  routes.py
frontend/covid_notifier/templates/: user_dashboard.html.j2
frontend/migrations/versions/: 9a5874575323_given_no_databases_were_in_place_prior_.py
migrations/versions/: 06ce75a60dfa_.py  85c63fc94e54_.py
