[tool.poetry]
name = "covid"
version = "0.0.1"
description = "Scraper for covid data in gallatian county."
authors = ["Dave Brown <28700674+exit107@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
twilio = "^6.44.0"
sqlalchemy = "^1.3.18"
sqlalchemy-utils = "^0.36.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
icecream = "^2.0.0"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
